load("//eng/shared/design-system:cds_package_static.bzl", "cds_package_static")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.woff2",
            "**/*.otf",
            "**/*.css",
        ],
    ),
    visibility = ["//visibility:public"],
)

cds_package_static(
    name = "fonts",
    srcs = [":runtime_source"],
    dependencies = [],
    monorepo_dependencies = [],
    peer_dependencies = [],
)
