load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "DEPENDENCIES", "PEER_DEPENDENCIES", "TYPE_DEPENDENCIES")

filegroup(
    name = "base_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "story/**",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Files to publish to NPM
# Needs to be separate since css/ttf files cant be linted
filegroup(
    name = "runtime_source",
    srcs = [
        ":base_source",
        "styles.css",
    ] + glob(
        [
            "fonts/*.ttf",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Files for storybook
filegroup(
    name = "story_source",
    srcs = glob([
        "story/**/*",
    ]),
    visibility = ["//visibility:public"],
)

# Files to lint and test
filegroup(
    name = "source",
    srcs = [":base_source"] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

cds_package(
    name = "icons",
    srcs = [":runtime_source"],
    cds_dependencies = [
        "common",
        "utils",
    ],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
    type_dependencies = TYPE_DEPENDENCIES,
)
