load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "DEPENDENCIES", "PEER_DEPENDENCIES")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.json",
        ],
        exclude = [
            "**/*.test.*",
            "basepackage.json",
            "tsconfig.build.json",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.json",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Package building and publishing
cds_package(
    name = "lottie-files",
    srcs = [":runtime_source"],
    cds_dependencies = [
        "common",
    ],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
)
