load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "DEPENDENCIES", "PEER_DEPENDENCIES")
load("//tools/js:def.bzl", "eslint_test")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.json",
        ],
        exclude = [
            "**/*.test.*",
            "basepackage.json",
            "tsconfig.build.json",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.json",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "source_without_json",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    lints = [":source_without_json"],
)

# Package building and publishing
cds_package(
    name = "lottie-files",
    srcs = [":runtime_source"],
    cds_dependencies = [],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
)
