load("//eng/shared/design-system:cds_package.bzl", "cds_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.json",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.js",
            "**/*.test.*",
            "**/*.mdx",
        ],
        exclude = [
            "**/*.json",
        ],
    ),
    visibility = ["//visibility:public"],
)

DEPENDENCIES = []

PEER_DEPENDENCIES = [
    "@npm//react",
]

cds_package(
    name = "lottie",
    srcs = [":runtime_source"],
    dependencies = DEPENDENCIES,
    monorepo_dependencies = [
        "//eng/shared/design-system/common:package_json",
        "//eng/shared/design-system/utils:package_json",
    ],
    peer_dependencies = PEER_DEPENDENCIES,
)

# Useful in Build of monorepo consumers
filegroup(
    name = "build_source",
    srcs = [":runtime_source"] + DEPENDENCIES + PEER_DEPENDENCIES,
    visibility = ["//visibility:public"],
)
