load("//tools/js:metro_bundle.bzl", "metro_bundle")
load("//eng/shared/design-system:config.bzl", "append_cds_mobile_deps")
load("//tools:def.bzl", "eslint_fix", "eslint_test")

filegroup(
    name = "source",
    srcs = [
        "index.ts",
        "App.tsx",
    ] + glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

ESLINT_SRCS = [
    "//eng/shared/design-system/common:source",
    "//eng/shared/design-system/lottie-files:source",
    "//eng/shared/design-system/mobile:source",
    "//eng/shared/design-system/storybook:source",
    "//eng/shared/design-system/utils:source",
]

eslint_test(
    name = "lint",
    srcs = ESLINT_SRCS,
    lint_srcs = [":source"],
)

eslint_fix(
    name = "lint_fix",
    srcs = ESLINT_SRCS,
    lint_srcs = [":source"],
)

METRO_SRCS = [
    "//eng/shared/design-system/common:runtime_source",
    "//eng/shared/design-system/lottie-files:runtime_source",
    "//eng/shared/design-system/mobile:runtime_source",
    "//eng/shared/design-system/mobile-playground:source",
    "//eng/shared/design-system/storybook:source",
    "//eng/shared/design-system/utils:runtime_source",
]

METRO_DEPS = append_cds_mobile_deps([
    "@npm//@react-navigation/native",
    "@npm//@react-navigation/stack",
    "@npm//react-native-gesture-handler",
])

metro_bundle(
    name = "bundle_android",
    srcs = METRO_SRCS,
    platform = "android",
    project = "cds",
    deps = METRO_DEPS,
)

metro_bundle(
    name = "bundle_ios",
    srcs = METRO_SRCS,
    platform = "ios",
    project = "cds",
    deps = METRO_DEPS,
)
