load("//tools/js:metro_bundle.bzl", "metro_bundle")
load("//tools/js:def.bzl", "eslint_test")
load("//tools:def.bzl", "nodejs_binary")

# This is a hack to build the @cbhq
nodejs_binary(
    name = "build_deps",
    data = [
        "@npm//@cbhq/cds-common",
        "@npm//@cbhq/cds-mobile",
    ],
    entry_point = "deps.js",
)

filegroup(
    name = "source",
    srcs = [
        "index.ts",
        "App.tsx",
    ] + glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

ESLINT_SRCS = [
    "//eng/shared/design-system/common:source",
    "//eng/shared/design-system/lottie-files:source",
    "//eng/shared/design-system/mobile:source",
    "//eng/shared/design-system/storybook:source",
    "//eng/shared/design-system/utils:source",
]

eslint_test(
    name = "lint",
    srcs = ESLINT_SRCS,
    lints = [":source"],
)

METRO_SRCS = [
    "//eng/shared/design-system/mobile-playground:source",
    "//eng/shared/design-system/storybook:source",
]

METRO_DEPS = [
    "@npm//@cbhq/cds-mobile",
    "@npm//@react-navigation/native",
    "@npm//@react-navigation/stack",
    "@npm//react-native-gesture-handler",
]

metro_bundle(
    name = "bundle_android",
    srcs = METRO_SRCS,
    platform = "android",
    project = "cds",
    deps = METRO_DEPS,
)

metro_bundle(
    name = "bundle_ios",
    srcs = METRO_SRCS,
    platform = "ios",
    project = "cds",
    deps = METRO_DEPS,
)
