load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "CDS_DEPENDENCIES", "DEPENDENCIES", "PEER_DEPENDENCIES", "TYPE_DEPENDENCIES")
load("//tools/js:def.bzl", "eslint_test")

SOURCE = [
    "**/*.ts",
    "**/*.tsx",
    "**/*.ttf",
]

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        SOURCE + [
            "**/*.png",
            "**/*.svg",
            "**/*.md",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        SOURCE + [
            "**/*.test.*",
            "**/*.mdx",
        ],
        exclude = [
            "**/*.ttf",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    srcs = CDS_DEPENDENCIES,
    lints = [":source"],
    deps = TYPE_DEPENDENCIES,
)

cds_package(
    name = "mobile",
    srcs = [":runtime_source"],
    cds_dependencies = [
        "common",
        "fonts",
        "lottie-files",
        "utils",
    ],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
    type_dependencies = TYPE_DEPENDENCIES,
)
