load("//tools/js:def.bzl", "eslint_test", "ts_package")

SOURCE = [
    "**/*.ts",
    "**/*.tsx",
    "**/*.ttf",
]

DEPS = [
    "@npm//@cbhq/cds-common",
    "@npm//@cbhq/cds-fonts",
    "@npm//@cbhq/cds-lottie-files",
    "@npm//@cbhq/cds-utils",
    "@npm//lodash",
    "@npm//url-parse",
]

PEER_DEPS = [
    "@npm//lottie-ios",
    "@npm//lottie-react-native",
    "@npm//react-native-linear-gradient",
    "@npm//react-native-navigation-bar-color",
    "@npm//react-native-svg",
    "@npm//react-native",
    "@npm//react",
    "@npm//react-native-inappbrowser-reborn",
]

DEV_DEPS = [
    "@npm//@types/lodash",
    "@npm//@types/react",
    "@npm//@types/react-native",
    "@npm//@types/url-parse",
    "@npm//type-fest",
]

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        SOURCE + [
            "**/*.png",
            "**/*.svg",
            "**/*.md",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        SOURCE + [
            "**/*.test.*",
            "**/*.mdx",
        ],
        exclude = [
            "**/*.ttf",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    srcs = ["//eng/shared/design-system/storybook:source"],
    lints = [":source"],
    deps = DEPS + PEER_DEPS + DEV_DEPS,
)

# Package building and publishing
ts_package(
    name = "package",
    package_name = "@cbhq/cds-mobile",
    srcs = [":runtime_source"],
    dev_deps = DEV_DEPS,
    peer_deps = PEER_DEPS,
    relative_source_directory = ".",
    static_files = {
        ":CHANGELOG.md": "./CHANGELOG.md",
        ":README.md": "./README.md",
    },
    typescript_config = ":tsconfig.build.json",
    deps = DEPS,
)
