filegroup(
    name = "source",
    srcs = [
        ".storybook/.env.prod",
        ".storybook/.env.local",
        ".storybook/figma_oauth.html",
    ] + glob(
        [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)
