exports_files([
    ".storybook",
])

filegroup(
    name = "config_source",
    srcs = glob(
        [
            ".storybook/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            ".storybook/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)
