load("//tools/js:def.bzl", "type_check")

exports_files([
    ".storybook",
])

filegroup(
    name = "config_source",
    srcs = glob(
        [
            ".storybook/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            ".storybook/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "source_no_decorators",
    srcs = glob(
        [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            ".storybook/**/*",
            "decorators/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "project_source",
    srcs = glob([
        "data/**/*.ts",
        "stories/**/*.ts",
        "stories/**/*.tsx",
        "utils/**/*.ts",
        "utils/**/*.tsx",
    ]) + ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

type_check(
    name = "typecheck",
    srcs = [
        ":project_source",
        "//eng/shared/design-system/common:project_source",
        "//eng/shared/design-system/lottie-files:project_source",
        "//eng/shared/design-system/mobile:project_source",
        "//eng/shared/design-system/utils:project_source",
    ],
    deps = [
        "@npm//@cbhq/cds-common",
        "@npm//@types/react",
        "@npm//@types/react-native",
    ],
)
