load("//eng/shared/design-system:cds_package.bzl", "cds_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ) + [
        "native.js",
    ],
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = [":runtime_source"] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Dependencies
filegroup(
    name = "dependencies",
    srcs = [
        "@npm//linaria",
        "@npm//type-fest",
    ],
    visibility = ["//visibility:public"],
)

cds_package(
    name = "theme",
    srcs = [":runtime_source"],
    dependencies = [
        ":dependencies",
    ],
    monorepo_dependencies = [
        "//eng/shared/design-system/utils:package_json",
    ],
    peer_dependencies = [
        "@npm//react",
    ],
)
