load("//eng/shared/design-system:cds_package.bzl", "cds_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ) + [
        "native.js",
    ],
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = [
        ":runtime_source",
    ] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

DEPENDENCIES = [
    "@npm//linaria",
    "@npm//type-fest",
]

PEER_DEPENDENCIES = [
    "@npm//react",
]

cds_package(
    name = "theme",
    srcs = [":runtime_source"],
    dependencies = DEPENDENCIES,
    monorepo_dependencies = [
        "//eng/shared/design-system/utils:package_json",
    ],
    peer_dependencies = PEER_DEPENDENCIES,
)

# Useful in Build of monorepo consumers
filegroup(
    name = "build_source",
    srcs = [":runtime_source"] + DEPENDENCIES + PEER_DEPENDENCIES,
    visibility = ["//visibility:public"],
)
