load("//eng/shared/design-system:cds_package.bzl", "cds_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = [":runtime_source"] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

DEPENDENCIES = [
    "@npm//humps",
    "@npm//@types/humps",
    "@npm//type-fest",
]

cds_package(
    name = "utils",
    srcs = [":runtime_source"],
    dependencies = DEPENDENCIES,
    monorepo_dependencies = [],
    peer_dependencies = [],
)

# Useful in Build of monorepo consumers
filegroup(
    name = "build_source",
    srcs = [":runtime_source"] + DEPENDENCIES,
    visibility = ["//visibility:public"],
)
