load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "DEPENDENCIES", "PEER_DEPENDENCIES", "TYPE_DEPENDENCIES")
load("//tools/js:def.bzl", "eslint_test")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.md",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    lints = [":source"],
)

# Package building and publishing
cds_package(
    name = "utils",
    srcs = [":runtime_source"],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
    type_dependencies = TYPE_DEPENDENCIES,
)
