load("//tools/js:def.bzl", "eslint_test", "ts_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.md",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    lints = [":source"],
)

ts_package(
    name = "package",
    package_name = "@cbhq/cds-utils",
    srcs = [":runtime_source"],
    dev_deps = [
        "@npm//@types/humps",
        "@npm//@types/node",
    ],
    peer_deps = [],
    relative_source_directory = ".",
    static_files = {
        ":CHANGELOG.md": "./CHANGELOG.md",
        ":README.md": "./README.md",
    },
    typescript_config = ":tsconfig.build.json",
    deps = [
        "@npm//humps",
        "@npm//type-fest",
    ],
)
