load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "DEPENDENCIES", "PEER_DEPENDENCIES", "TYPE_DEPENDENCIES")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.stories.*",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Files to lint and test
filegroup(
    name = "source",
    srcs = [":runtime_source"] + glob(
        [
            "**/*.stories.*",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Files for storybook
filegroup(
    name = "story_source",
    srcs = glob(
        [
            "**/*.stories.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

cds_package(
    name = "web",
    srcs = [
        ":runtime_source",
        # Required for CSS token interpolation
        "//eng/shared/design-system/common:runtime_source",
    ],
    cds_dependencies = [
        "common",
        "fonts",
        "lottie-files",
        "utils",
    ],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
    type_dependencies = TYPE_DEPENDENCIES,
)
