load("//eng/shared/design-system:cds_package.bzl", "cds_package")
load(":deps.bzl", "CDS_DEPENDENCIES", "DEPENDENCIES", "PEER_DEPENDENCIES", "TYPE_DEPENDENCIES")
load("//tools:def.bzl", "eslint_fix", "eslint_test")

SOURCE = [
    "**/*.ts",
    "**/*.tsx",
    "**/*.woff2",
]

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        SOURCE,
        exclude = [
            "**/*.stories.*",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        SOURCE + [
            "**/*.stories.ts",
            "**/*.stories.tsx",
            "**/*.test.*",
        ],
        exclude = [
            "**/*.woff2",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    data = CDS_DEPENDENCIES,
    sources = ":source",
)

eslint_fix(
    name = "lint_fix",
    data = CDS_DEPENDENCIES,
    sources = ":source",
)

# Files for storybook
filegroup(
    name = "story_source",
    srcs = glob(
        [
            "**/*.stories.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

cds_package(
    name = "web",
    srcs = [
        ":runtime_source",
        # Required for CSS token interpolation
        "//eng/shared/design-system/common:runtime_source",
    ],
    cds_dependencies = [
        "common",
        "fonts",
        "lottie-files",
        "utils",
    ],
    dependencies = DEPENDENCIES,
    peer_dependencies = PEER_DEPENDENCIES,
    type_dependencies = TYPE_DEPENDENCIES,
)
