load("//tools/js:def.bzl", "eslint_test", "ts_package")
load(":deps.bzl", "DEPS", "DEV_DEPS", "PEER_DEPS")

SOURCE = [
    "**/*.ts",
    "**/*.tsx",
    "**/*.woff2",
]

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        SOURCE,
        exclude = [
            "**/*.stories.*",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        SOURCE + [
            "**/*.stories.ts",
            "**/*.stories.tsx",
            "**/*.test.*",
        ],
        exclude = [
            "**/*.woff2",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    srcs = ["//eng/shared/design-system/storybook:source"],
    lints = [":source"],
    deps = DEPS + PEER_DEPS + DEV_DEPS,
)

# Files for storybook
filegroup(
    name = "story_source",
    srcs = glob(
        [
            "**/*.stories.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Package building and publishing
ts_package(
    name = "package",
    package_name = "@cbhq/cds-web",
    srcs = [
        ":runtime_source",
        "//eng/shared/design-system:.babelrc.js",
        "//eng/shared/design-system:linaria.config.js",
    ],
    dev_deps = DEV_DEPS,
    peer_deps = PEER_DEPS,
    relative_source_directory = ".",
    static_files = {
        ":CHANGELOG.md": "./CHANGELOG.md",
        ":README.md": "./README.md",
    },
    typescript_config = ":tsconfig.build.json",
    deps = DEPS,
)
