load("//tools/js:def.bzl", "docusaurus")

filegroup(
    name = "source",
    srcs = glob(
        include = [
            "**/*.md",
            "**/*.mdx",
            "**/*.tsx",
            "**/*.ts",
            "**/*.js",
            "**/*.css",
            "**/*.json",
            "static/**/*.svg",
            "static/**/*.ico",
            "static/**/*.png",
            "static/**/*.jpg",
            "static/**/*.css",
            "static/**/*.json",
        ],
    ),
)

docusaurus(
    name = "docusaurus",
    srcs = [
        ":source",
        "//eng/shared/design-system:linaria.config.js",
    ],
    deps = [
        "@npm//@cbhq/cds-common",
        "@npm//@cbhq/cds-fonts",
        "@npm//@cbhq/cds-lottie-files",
        "@npm//@cbhq/cds-mobile",
        "@npm//@cbhq/cds-utils",
        "@npm//@cbhq/cds-web",
        "@npm//antd",
        "@npm//react-virtualized",
    ],
)
