load("//tools/js:def.bzl", "docusaurus", "eslint_test")

srcs = [
    "//eng/shared/design-system:build_source",
    "//eng/shared/design-system:linaria.config.js",
]

exclude_glob = [
    ".docusaurus/**",
]

filegroup(
    name = "lintable_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = exclude_glob,
    ),
)

filegroup(
    name = "source",
    srcs = glob(
        include = [
            "**/*.css",
            "**/*.ico",
            "**/*.jpg",
            "**/*.js",
            "**/*.json",
            "**/*.md",
            "**/*.mdx",
            "**/*.png",
            "**/*.svg",
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = exclude_glob,
    ),
)

docusaurus(
    name = "docusaurus",
    srcs = [":source"] + srcs,
    deps = [
        "@npm//@cbhq/cds-common",
        "@npm//@cbhq/cds-fonts",
        "@npm//@cbhq/cds-lottie-files",
        "@npm//@cbhq/cds-mobile",
        "@npm//@cbhq/cds-utils",
        "@npm//@cbhq/cds-web",
        "@npm//antd",
        "@npm//react-virtualized",
    ],
)

eslint_test(
    name = "lint",
    srcs = srcs,
    lints = [":lintable_source"],
    local_eslint_config = ".eslintrc",
)
