load("//tools/js:def.bzl", "docusaurus", "eslint_test", "type_check")

srcs = [
    "//eng/shared/design-system:build_source",
    "//eng/shared/design-system:linaria.config.js",
]

exclude_glob = [
    ".docusaurus/**",
]

filegroup(
    name = "lintable_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = exclude_glob,
    ),
)

filegroup(
    name = "source",
    srcs = glob(
        include = [
            "**/*.css",
            "**/*.ico",
            "**/*.jpg",
            "**/*.js",
            "**/*.json",
            "**/*.md",
            "**/*.mdx",
            "**/*.png",
            "**/*.svg",
            "**/*.ts",
            "**/*.tsx",
            "**/*.gif",
        ],
        exclude = exclude_glob,
    ),
)

docusaurus(
    name = "docusaurus",
    srcs = [":source"] + srcs,
    live_packages = "cds-\\w+",
    deps = [
        "@npm//@cbhq/cds-common",
        "@npm//@cbhq/cds-fonts",
        "@npm//@cbhq/cds-lottie-files",
        "@npm//@cbhq/cds-mobile",
        "@npm//@cbhq/cds-utils",
        "@npm//@cbhq/cds-web",
        "@npm//antd",
        "@npm//react-virtualized",
    ],
)

eslint_test(
    name = "lint",
    srcs = srcs,
    lints = [":lintable_source"],
    local_eslint_config = ".eslintrc",
)

filegroup(
    name = "project_source",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
    ]) + ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

type_check(
    name = "typecheck",
    srcs = [
        ":project_source",
        "//eng/shared/design-system/common:project_source",
        "//eng/shared/design-system/lottie-files:project_source",
        "//eng/shared/design-system/storybook:project_source",
        "//eng/shared/design-system/utils:project_source",
        "//eng/shared/design-system/web:project_source",
        "//eng/shared/utils/jest:project_source",
    ],
    deps = [
        "@npm//@cbhq/cds-web",
        "@npm//@docusaurus/core",
        "@npm//@docusaurus/module-type-aliases",
        "@npm//@docusaurus/preset-classic",
        "@npm//@types/lodash",
        "@npm//@types/react-router-dom",
        "@npm//@types/react-virtualized",
        "@npm//antd",
        "@npm//lodash",
        "@npm//rc-select",
        "@npm//react-router-dom",
        "@npm//react-virtualized",
    ],
)
