load("//tools/project_settings:project_settings.bzl", "project_settings")
load("//tools/zip:zip.bzl", "pkg_zip")
load("//tools/syn:providers.bzl", "syn_file_asset")
load("//tools/syn:syn_deployable.bzl", "syn_deployable")
load("//tools/js:def.bzl", "ts_script")
load("//eng/shared/design-system:cds_deployable.bzl", "cds_deployable")
load("//eng/shared/design-system:config.bzl", "PACKAGES", "STATIC_PACKAGES")

project_settings(
    caf = False,
    send_dev_notifications = False,
    slack_channels = ["#cds-builds"],
)

[cds_deployable(name = package) for package in (PACKAGES + STATIC_PACKAGES)]

pkg_zip(
    name = "bundled_storybook_feature",
    srcs = [
        "//eng/shared/design-system:storybook_build",
    ],
    remap_paths = {"{gendir}/eng/shared/design-system/storybook": "feature/YOUR_FEATURE_BRANCH_NAME"},
    visibility = ["//visibility:public"],
)

syn_deployable(
    name = "storybook_feature",
    assets = [
        syn_file_asset(
            name = "bundled_storybook_asset_feature",
            src = ":bundled_storybook_feature",
            bucket = "coinbase-design-system-storybook",
            is_zip = True,
        ),
    ],
    config_name = "storybook",  # config_name (i.e. Codeflow's config_name)
    target = "development",  # environment to deploy to
)

# WEB CSS

ts_script(
    name = "web",
    srcs = [
        "//eng/shared/design-system/cloud:combineCssFiles.ts",
        "//eng/shared/design-system/fonts:package_tar",
        "//eng/shared/design-system/web:package_tar",
    ],
    output_dir = True,
    script = "eng/shared/design-system/cloud/combineCssFiles.ts",
    visibility = ["//visibility:public"],
    deps = [
        "@npm//@cbhq/cds-fonts",
        "@npm//@cbhq/cds-web",
        "@npm//fast-glob",
        "@npm//yargs",
    ],
)

pkg_zip(
    name = "web_zip",
    srcs = [":web"],
    visibility = ["//visibility:public"],
)

syn_deployable(
    name = "upload_css",
    assets = [
        syn_file_asset(
            name = "cds-css",
            src = ":web_zip",
            bucket = "cb-assets-prod",
            is_zip = True,
            key = "cds/",
        ),
    ],
    config_name = "production",
    continuous_deployment = True,
    target = "production",
)

syn_deployable(
    name = "upload_css_sw_cache",
    assets = [
        syn_file_asset(
            name = "cds-css-sw",
            src = ":web_zip",
            bucket = "cb-assets-prod",
            is_zip = True,
            key = "assets/sw-cache/",
        ),
    ],
    config_name = "production",
    continuous_deployment = True,
    target = "production",
)

syn_deployable(
    name = "upload_css_dev",
    assets = [
        syn_file_asset(
            name = "cds-css-dev",
            src = ":web_zip",
            bucket = "cb-assets-dev",
            is_zip = True,
            key = "cds/",
        ),
    ],
    config_name = "development",
    target = "development",
)
