load("//tools/js:def.bzl", "eslint_test", "type_check")

exports_files([
    "babel-plugins/linariaCssExtractPlugin.js",
    "babel-plugins/linariaPreset.js",
])

filegroup(
    name = "base_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Needs to be separate since ejs files cant be linted
filegroup(
    name = "runtime_source",
    srcs = [":base_source"] + glob(
        [
            "**/*.ejs",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = [":base_source"] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    srcs = [
        "//eng/shared/design-system/common:source",
        "//eng/shared/design-system/utils:source",
        "//eng/shared/utils/monorepo:source",
    ],
    lints = [":source"],
)

filegroup(
    name = "project_source",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
        "**/*.svg",
    ]) + ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

type_check(
    name = "typecheck",
    srcs = [
        ":project_source",
        "//eng/shared/design-system/common:project_source",
        "//eng/shared/design-system/utils:project_source",
        "//eng/shared/utils/monorepo:project_source",
    ],
    deps = [
        "@npm//@cbhq/cds-common",
        "@npm//@cbhq/cds-utils",
        "@npm//@cbhq/monorepo-utils",
        "@npm//@k-vyn/coloralgorithm",
        "@npm//@types/ejs",
        "@npm//@types/lodash",
        "@npm//@types/node",
        "@npm//@types/prettier",
        "@npm//@types/svgo",
        "@npm//@types/yargs",
        "@npm//axios",
        "@npm//chalk",
        "@npm//ejs",
        "@npm//fast-glob",
        "@npm//lodash",
        "@npm//ora",
        "@npm//prettier",
        "@npm//react-docgen-typescript",
        "@npm//svgo",
        "@npm//yargs",

        # Tools deps
        "@npm//@graphql-tools/merge",
        "@npm//@types/jscodeshift",
        "@npm//@types/semver",
        "@npm//graphql",
    ],
)
