load("//tools/js:def.bzl", "eslint_test", "type_check")
load(":deps.bzl", "STORYBOOK_DEPS")

DEPS = STORYBOOK_DEPS + ["@npm//@storybook/react"]

SRCS = [
    ":project_source",
    "//eng/shared/design-system/common:project_source",
    "//eng/shared/design-system/lottie-files:project_source",
    "//eng/shared/design-system/utils:project_source",
    "//eng/shared/design-system/web:project_source",
    "//eng/shared/utils/jest:project_source",
]

exports_files([
    ".storybook",
])

filegroup(
    name = "config_source",
    srcs = glob(
        [
            ".storybook/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            ".storybook/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "project_source",
    srcs = ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    srcs = SRCS,
    lints = [":source"],
    deps = DEPS,
)

type_check(
    name = "typecheck",
    srcs = SRCS,
    deps = DEPS,
)
